test/message/vm_display_runtime_error.out
beginning
test.vm:1
throw new Error("boo!")
^

Error: boo!
    at test.vm:1:7
    at ContextifyScript.Script.runInThisContext (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_display_runtime_error.js:*)
    at Module._compile (module.js:*)
    at Object.Module._extensions..js (module.js:*)
    at Module.load (module.js:*)
    at tryModuleLoad (module.js:*:*)
    at Function.Module._load (module.js:*)
    at Function.Module.runMain (module.js:*)
test.vm:1
throw new Error("spooky!")
^

Error: spooky!
    at test.vm:1:7
    at ContextifyScript.Script.runInThisContext (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_display_runtime_error.js:*)
    at Module._compile (module.js:*)
    at Object.Module._extensions..js (module.js:*)
    at Module.load (module.js:*)
    at tryModuleLoad (module.js:*:*)
    at Function.Module._load (module.js:*)
    at Function.Module.runMain (module.js:*)
